public/custom.css
.lblb-tu-mitonnes__header {
  margin-top: 2rem;
}

.lblb-tu-mitonnes__header .lblb-page-title,
.lblb-tu-mitonnes__header .lblb-paragraph,
.lblb-tu-mitonnes__header .lblb-share-article {
  margin-bottom: 1rem;
}

.lblb-tu-mitonnes__filters {
  background: rgba(233, 24, 69, .9);
}

.lblb-tu-mitonnes__filters__filter select {
  color: #e91845;
}

.lblb-tu-mitonnes__article-tile {
  margin: .5rem;
  width: calc((100vw / 5) - 1rem);
  height: calc((100vw / (5/(4/3))) - 1rem);
}

.lblb-tu-mitonnes__article-tile
  .lblb-tu-mitonnes__article-tile__shaded-hover-bg {
    display: block;
    opacity: .6;
}

.lblb-tu-mitonnes__article-tile:hover
  .lblb-tu-mitonnes__article-tile__shaded-hover-bg {
    display: block;
    opacity: .8;
}

.lblb-tu-mitonnes__article-tile
  .lblb-tu-mitonnes__article-tile__content {
    display: block;
    opacity: .7;
}

.lblb-tu-mitonnes__article-tile:hover
  .lblb-tu-mitonnes__article-tile__content {
    display: block;
    opacity: 1;
}

@media screen and (max-width: 100rem) {
  .lblb-tu-mitonnes__article-tile {
    width: calc((100vw / 4) - 1rem);
    height: calc((100vw / (4/(4/3))) - 1rem);
  }
}

@media screen and (max-width: 80rem) {
  .lblb-tu-mitonnes__article-tile {
    width: calc((100vw / 3) - 1rem);
    height: calc((100vw / (3/(4/3))) - 1rem);
  }
}

@media screen and (max-width: 63rem) {
  .lblb-tu-mitonnes__article-tile {
    width: calc((100vw / 2) - 1rem);
    height: calc((100vw / 2) - 1rem);
  }
}

@media screen and (max-width: 40rem) {
  .lblb-tu-mitonnes__article-tile {
    width: calc((100vw / 1) - 1rem);
    height: calc((100vw / 1) - 1rem);
  }
}

.lblb-tu-mitonnes__article-tile
  .lblb-tu-mitonnes__article-tile__content {
    opacity: .8;
}

.lblb-tu-mitonnes__article-tile:hover
  .lblb-tu-mitonnes__article-tile__content {
    opacity: 1;
}

.lblb-tu-mitonnes__article-tile__content {
  height: unset;
  bottom: 0;
}

.lblb-tu-mitonnes__article-tile__content
  .lblb-section-title {
    font-family: 'Libe-Sans-Semicondensed', Helvetica, Arial, sans-serif;
}

.lblb-tu-mitonnes__full-article {
  padding: 0 1rem;
  display: none;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  z-index: 20;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: #FFFFFF;
  overflow-y: scroll;
}

@media screen and (max-width: 40rem) {
  .lblb-tu-mitonnes__full-article {
    padding-top: 3.5rem;
  }
}

.lblb-tu-mitonnes_full-article-opened
  .lblb-tu-mitonnes__full-article {
    display: flex;
}

.lblb-tu-mitonnes__full-article__inner {
  max-width: 600px;
}

.lblb-tu-mitonnes__full-article__inner button {
  position: fixed;  
  left: 1rem;
  padding: 0;
  border: none;
  background: transparent;
}

.lblb-tu-mitonnes__full-article__inner button .lblb-svg svg {
  box-shadow: 0 0 0 .125rem rgba(33, 33, 33, .2);
}

.lblb-tu-mitonnes__full-article__inner button .lblb-svg #background {
  fill: #FFFFFF;
}

.lblb-tu-mitonnes__full-article__inner button .lblb-svg #fill-1 {
  fill: #e91845;
}

.lblb-tu-mitonnes__full-article__inner .lblb-slug {
  margin-top: 2rem;
  margin-bottom: 1rem;
}

.lblb-tu-mitonnes__full-article__inner .lblb-inter-title,
.lblb-tu-mitonnes__full-article__inner .lblb-paragraph {
  margin-bottom: 1rem;
}

.lblb-tu-mitonnes__full-article__inner .lblb-jsx-interpreter {
  margin-bottom: 3rem;
  display: block;
}

.lblb-tu-mitonnes__full-article__inner img {
  max-width: 600px;
  margin-bottom: 1rem;
  height: auto;
}


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *
 * PARAGRAPH
 *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

.lblb-tu-mitonnes__full-article .lblb-jsx-interpreter,
.lblb-tu-mitonnes__full-article p {
  font-family: 'Georgia', serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #212121;
}

.lblb-tu-mitonnes__full-article p {
  margin-bottom: 1rem;
}

.lblb-tu-mitonnes__full-article p.note {
  font-style: italic;
  color: #999999;
}

.lblb-tu-mitonnes__full-article .lblb-jsx-interpreter a,
.lblb-tu-mitonnes__full-article p a {
  color: unset;
  cursor: pointer;
  text-decoration: none;
  border-bottom: 1px solid #e91845;
}

.lblb-tu-mitonnes__full-article .lblb-jsx-interpreter a:hover,
.lblb-tu-mitonnes__full-article p a:hover {
  border-bottom-width: 2px;
}

@media screen and (max-width: 63rem) {
  .lblb-tu-mitonnes__full-article .lblb-jsx-interpreter,
  .lblb-tu-mitonnes__full-article p  {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media screen and (max-width: 40rem) {
  .lblb-tu-mitonnes__full-article .lblb-jsx-interpreter,
  .lblb-tu-mitonnes__full-article p  {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *
 * BLOCK TITLE
 *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

.lblb-tu-mitonnes__full-article h3 {
  color: #212121;
  font-family: 'Libe-Sans', Helvetica, Arial, sans-serif;
  margin-bottom: 1rem;
}

.lblb-tu-mitonnes__full-article h3 {
  display: block;
  font-size: 1.375rem;
  line-height: 1.5rem;
  font-weight: 800;
}

@media screen and (max-width: 63rem) {
  .lblb-tu-mitonnes__full-article h3 {
    font-size: 1.375rem;
    line-height: 1.5rem;
  }
}

@media screen and (max-width: 40rem) {
  .lblb-tu-mitonnes__full-article h3 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

